# cpp-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat  run.sh
app/: CMakeLists.txt  main.cpp
cmake/: build_configuration.cmake  clang_format.cmake  compiler_options.cmake  git_hooks.cmake  unit_tests.cmake
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/include/common/: fp_utils.hpp  time_utils.hpp
libs/invest/: CMakeLists.txt
libs/invest/include/invest/: stocks.h  types.h
libs/invest/src/: helper.cpp  helper.h  stocks.cpp
libs/invest/tests/: CMakeLists.txt  tests.cpp
libs/math/: CMakeLists.txt
libs/math/include/math/: stats.h
libs/math/src/: stats.cpp
libs/math/tests/: CMakeLists.txt  tests.cpp
scripts/: Build.py  Format.py  Run.py  build.bat  build.sh  gen.sh  make.py  pre-commit-hook
